--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
+/* globals.css */
+.font-alex-brush {
+  font-family: var(--font-alex-brush);
+}
+
+.font-josefin-sans {
+  font-family: var(--font-josefin-sans);
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
