--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,10 @@
 }
 
 :root {
-  --background: #ffffff;
+  --background: #f8f8f8;
   --foreground: #171717;
+  --accent: #909d85; 
+  --color: #523200;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -28,7 +30,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-josefin-sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
